--- a/youtube-tutorial/5/Makefile
+++ b/youtube-tutorial/5/Makefile
@@ -1,24 +1,14 @@
 DEBUG=-g
 CC=gcc
-CFLAGS=-Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -std=c11 \
+CFLAGS=-Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -std=c11 -pedantic \
        $(shell pkg-config --libs --cflags gtk4) \
        $(DEBUG)
 BINARY=main
-OBJECTS=demo-widget.o demo-resource.o
-RESOURCE_FILE = demo.gresource.xml
+OBJECTS=demo-animal.o
 
 default: $(BINARY)
 
 $(BINARY): $(OBJECTS)
 
-resources:
-	glib-compile-resources --generate-source --target=demo-resource.c \
-		$(RESOURCE_FILE)
-
-demo-resource.o: resources
-	$(CC) $(CFLAGS) -c -o demo-resource.o demo-resource.c
-
 clean:
-	rm -f $(OBJECTS) $(BINARY) demo-resource.c
-
-.PHONY: default resources clean
+	rm -f $(OBJECTS) $(BINARY)
