--- a/youtube-tutorial/1/Makefile
+++ b/youtube-tutorial/1/Makefile
@@ -1,8 +1,9 @@
 DEBUG=-g
 CC=gcc
 CFLAGS=-Wall -Wextra -std=c11 -pedantic \
-       $(shell pkg-config --libs --cflags gtk4) \
+       $(shell pkg-config --cflags gtk4) \
        $(DEBUG)
+LDFLAGS=$(shell pkg-config --libs gtk4)
 BINARY=main
 OBJECTS=demowidget.o
 
