More comments in Makefiles.

--- a/youtube-tutorial/4/Makefile
+++ b/youtube-tutorial/4/Makefile
@@ -1,5 +1,7 @@
 DEBUG=-g
 CC=gcc
+# NOTE: If this doesn't work, try splitting up
+# CFLAGS and LDFLAGS as per the Makefile in part 1.
 CFLAGS=-Wall -Wextra -Wno-unused-parameter -Wno-unused-variable -std=c11 -pedantic \
        $(shell pkg-config --libs --cflags gtk4) \
        $(DEBUG)
